# cloud_backend

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
cloud_backend/: __init__.py  __main__.py  config.py  conftest.py  gunicorn_runner.py  logging.py  settings.py
cloud_backend/queue/: __init__.py  celery.py  pre_start.py  worker.py
cloud_backend/services/: __init__.py
cloud_backend/services/rabbit/: lifetime.py
cloud_backend/services/redis/: lifetime.py
cloud_backend/tests/: __init__.py
cloud_backend/web/: __init__.py  application.py  lifetime.py
cloud_backend/web/api/: __init__.py  router.py
cloud_backend/web/api/docs/: __init__.py
cloud_backend/web/api/monitoring/: __init__.py
cloud_backend/web/api/redis/: __init__.py  views.py
cloud_backend/web/api/task/: __init__.py  schema.py  views.py
deploy/: Dockerfile  api.dockerfile  docker-compose.dev.yml  docker-compose.yml  worker.dockerfile
scripts/: worker.sh
